deployment/k8s-config/kustomize/base/skaha/skaha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skaha-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: ws-uv.canfar.net
    http:
      paths:
      - path: /skaha
        pathType: Prefix
        backend:
          service:
            name: skaha-tomcat-svc
            port:
              number: 8080
